# ibn-mcp

./: .env.example  .gitignore  README.md  __init__.py  client.py  demo_gns3.py  mcp-client.py  pyproject.toml  topology.yaml
intent_pipeline/: __init__.py  config.py  gns3_client.py  intent_activation.py  intent_assurance.py  intent_resolver.py  intent_translator.py  inventory.py  policy_store.py  run_cycle.py  telnet_executor.py  topology.py
inventory/: gns3_inventory.json
mcp-servers/: gns3_mcp.py  weather.py
policies/: ibn_policies.yaml
server/: __init__.py  __main__.py  demo.py  gns3.py  gns3_mcp.py  gns3_mcp_old2.py
